--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with scope: :article,url:articles_path,local:true do |f|%>
+<h1>Edit Article</h1>
 
 <% if @article.errors.any? %>
     <h2>The following errors prevented the article from being saved </h2>
@@ -9,19 +9,22 @@
     </ul<
 <% end %>
 
-<p>
-    <%= f.label :title %><br>
-    <%= f.text_field:title %>
-</p>
 
-<P>
-    <%= f.label:description %><br>
-    <%= f.text_area:description %>
-</P>
 
-<p>
-    <%= f.submit %>
-</p>
+<%= form_with scope: :article,url:articles_path,local:true do |f|%>
+    <p>
+        <%= f.label :title %><br>
+        <%= f.text_field:title %>
+    </p>
+    
+    <P>
+        <%= f.label:description %><br>
+        <%= f.text_area:description %>
+    </P>
+    
+    <p>
+        <%= f.submit %>
+    </p>
 
 <% end %>
 
