--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,33 +1,5 @@
-<h1>Edit Article</h1>
-
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved </h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-           <li> <%= msg %></li>
-        <% end %>
-    </ul<
-<% end %>
-
-
-
-<%= form_with scope: :article,url:articles_path,local:true do |f|%>
-    <p>
-        <%= f.label :title %><br>
-        <%= f.text_field:title %>
-    </p>
-    
-    <P>
-        <%= f.label:description %><br>
-        <%= f.text_area:description %>
-    </P>
-    
-    <p>
-        <%= f.submit %>
-    </p>
-
-<% end %>
-
-<p>
-    <%= link_to 'Return to articles listing',articles_path %>
-</p>
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit article</h1>
+  <%= render 'form' %>
+</div> 
+ 
