--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,30 +1,4 @@
-<%= form_with scope: :article,url:articles_path,local:true do |f|%>
-
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved </h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-           <li> <%= msg %></li>
-        <% end %>
-    </ul<
-<% end %>
-
-<p>
-    <%= f.label :title %><br>
-    <%= f.text_field:title %>
-</p>
-
-<P>
-    <%= f.label:description %><br>
-    <%= f.text_area:description %>
-</P>
-
-<p>
-    <%= f.submit %>
-</p>
-
-<% end %>
-
-<p>
-    <%= link_to 'Return to articles listing',articles_path %>
-</p>
+<div id="page-content">
+  <h1 class="text-center mt-4">Create a new article</h1>
+  <%= render 'form' %>
+</div> 
