--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,16 +5,15 @@
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-header font-italic">
+            <!--by <%= @article.user.username if @article.user %>-->
             by Ajinkya Ghorpade
           </div>
           <div class="card-body">
             <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+            <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
-          </div>
-          <div class="card-footer text-muted">
-            <small>Created <%= time_ago_in_words(@article.created_at) %> ago, 
-            edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+            <% end %>
           </div>
         </div>
       </div>
